--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,96 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+
+
+/* Global */
+
+
+*, *::before, *::after {
+    box-sizing: border-box;
+    margin: 0; 
+    padding: 0; 
+}
+
+body { 
+    font-family: 'PT Sans', sans-serif;
+    min-height: 100vh;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    background-image: linear-gradient(to right bottom, #DFDC1B, #C0BE2F, #959446, #5C5C3E, #191917 );
+}
+
+/*Calculator-section*/
+
+.calculator {
+    height: 60vh; 
+    min-width: 370px;
+    max-width: 370px;
+}
+
+.display {
+    width: 100%;
+    min-height: 20%;
+    background-color: rgba(29, 27, 27, 0.151);
+    color: white; 
+    word-break: break-all;
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-right: 5px;
+    font-weight: bold;
+}
+
+.currentNumber {
+    font-size: 30px;
+}
+
+.previousNumber {
+    font-size: 20px;
+    color: rgba(182, 182, 182);
+}
+
+.mathSign {
+    font-size: 15px;
+}
+
+.panel {
+    height: 80%; 
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    gap: 2px; 
+}
+
+.panel button {
+    font-size: 20px;
+    background-color: rgba(80, 80, 80, 466);
+    color: white; 
+    cursor: pointer; 
+    border: none;
+    outline: none;
+    transition: all .2s ease-in-out;
+}
+
+.button :hover {
+    background-color: bisque;
+}
+
+.equals {
+    grid-row: -1/-3;
+    grid-column: -1/-2;
+}
+
+
+/*Calculation -history-section*/
+
+.calculator-history {
+    height: 60vh; 
+    width: 150px; 
+    margin: 20px; 
+    color: white; 
+    background-color: rgb(246, 246, 242);
+}
 
 
 /*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJzdHlsZS5jc3MifQ== */
