--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,8 @@ body {
     transition: all .2s ease-in-out;
 }
 
-.panel:hover {
-    color: bisque;
+.button-hover:hover{
+    background-color: rgba(50, 50, 50, 466);
 }
 
 .equals {
@@ -89,7 +89,7 @@ body {
     width: 150px; 
     margin: 5px; 
     color: white; 
-    background-image: linear-gradient(to right bottom, #5C5C3E, #191917 );
+    background-image: linear-gradient(to left bottom, #5C5C3E, #191917 );
     border: none;
 }
 
@@ -111,6 +111,7 @@ body {
 
 .history-btn:hover {
     background-color: white;
+    border-color: white;
 }
 
 .history {
