--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,134 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
-
-/* Global */
-
-
-*, *::before, *::after {
-    box-sizing: border-box;
-    margin: 0; 
-    padding: 0; 
+html {
+    font-family: 'Montserrat', sans-serif;
 }
 
-body { 
-    font-family: 'PT Sans', sans-serif;
+*, ::before, ::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+
+body {
     min-height: 100vh;
-    display: flex; 
+    background-image:linear-gradient(to right bottom, #e4a7db, #d245db, #a22dce, #7d3ac5, #4d56bd);
+    display: flex;
     justify-content: center;
     align-items: center;
-    background-image: linear-gradient(to right bottom, #DFDC1B, #C0BE2F, #959446, #5C5C3E, #191917 );
+    
 }
 
-/*Calculator-section*/
 
-.calculator {
-    height: 60vh; 
+.calculator{ 
+    height: 60vh;
     min-width: 370px;
     max-width: 370px;
 }
 
+
 .display {
     width: 100%;
     min-height: 20%;
-    background-image: linear-gradient(to right bottom, #5C5C3E, #191917 );
-    color: white; 
+    max-height: min-content;
+    background-color:rgba(29, 27, 27, 0.151);
+    box-shadow:  rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    color: white;
     word-break: break-all;
     text-align: right;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     padding-right: 5px;
     font-weight: bold;
 }
 
 .currentNumber {
-    font-size: 30px;
+    font-size: 35px;
+
 }
 
+
 .previousNumber {
+    color: rgb(182,182,182);
     font-size: 20px;
-    color: rgba(182, 182, 182);
 }
 
 .mathSign {
-    font-size: 15px;
+    font-size: 22px;
 }
 
+
 .panel {
-    height: 80%; 
+    height: 80%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
-    gap: 2px; 
+    gap: 2px;
 }
 
 .panel button {
-    font-size: 20px;
-    background-color: rgba(80, 80, 80, 466);
-    color: white; 
-    cursor: pointer; 
+    font-size: 25px;
+    background-color :rgba(0,0,0,0.466);
+    color: white;
+    cursor: pointer;
     border: none;
     outline: none;
     transition: all .2s ease-in-out;
 }
 
-.button-hover:hover{
-    background-color: rgba(50, 50, 50, 466);
+
+button:hover {
+    background-color:rgba(0,0,0,0.546);
 }
 
 .equals {
     grid-row: -1/-3;
-    grid-column: -1/-2;
+    grid-column: -2/-1;
 }
 
-
-/*Calculation -history-section*/
 
 .calculator-history {
-    height: 60vh; 
-    width: 150px; 
-    margin: 5px; 
-    color: white; 
-    background-image: linear-gradient(to left bottom, #5C5C3E, #191917 );
-    border: none;
-}
-
-.history-title {
-    text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-size: 20px; 
-}
-
-.history-btn {
-    border-radius: 20px;
-    padding: 7px 7px; 
-    font-size: 15px;
-    cursor: pointer;
-    margin-top: 15px;
-    background-color: rgba(80, 80, 80, 466);
+    height: 60vh;
+    margin: 20px;
+    width: 150px;
+    background-color: rgba(20,27,27,0.151);
     color: white;
-    display: none;
-}
-
-.history-btn:hover {
-    background-color: white;
-    border-color: white;
-    color: black;
+    padding: 5px 10px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .history {
-    text-align: center;
-    margin: 10px;
-    text-decoration: none;
+    list-style: none;
 }
 
-.hr-line {
-    margin: 10px 10px; 
+.history-title {
+    padding-bottom: 10px;
 }
 
 
+.history-btn {
+    color: white;
+    background: rgba(29,27,27,0.603);
+    border: none;
+    font-size: 15px;
+    padding: 8px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-weight: bold;
+    display: none;
+    outline: none;
+    margin: 5px auto;
+}
+.history-btn.active {
+    display: block;
+}
 
+.history-item {
+    margin: 8px 0px;
+    letter-spacing: 1px;
+    border-bottom: 1px solid rgba(29,27,27, 0.233);
+    padding-bottom: 5px;
+}
